homelab-gitops/apps/awx/overlays/dev/postgres-storage-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: awx
spec:
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        storageClassName: longhorn
